<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/marker_list_item_view_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/marker_name_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_view_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/marker_name_title_text" />

        <TextView
            android:id="@+id/marker_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/list_item_view_margin"
            app:layout_constraintLeft_toRightOf="@+id/marker_name_title_text_view"/>

        <TextView
            android:id="@+id/marker_coordinates_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_view_margin"
            app:layout_constraintTop_toBottomOf="@+id/marker_name_title_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/marker_coordinates_title_text" />

        <TextView
            android:id="@+id/marker_latitude_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/latlng_text_view_left_margin"
            android:layout_marginTop="@dimen/list_item_view_margin"
            android:layout_marginBottom="@dimen/list_item_view_margin"
            app:layout_constraintTop_toBottomOf="@+id/marker_coordinates_title_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/marker_latitude_title_text" />

        <TextView
            android:id="@+id/marker_latitude_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_view_margin"
            app:layout_constraintBottom_toBottomOf="@+id/marker_latitude_title_text_view"
            app:layout_constraintLeft_toRightOf="@+id/marker_latitude_title_text_view"
            app:layout_constraintTop_toTopOf="@+id/marker_latitude_title_text_view" />

        <TextView
            android:id="@+id/marker_longitude_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/latlng_text_view_left_margin"
            android:layout_marginTop="@dimen/list_item_view_margin"
            android:layout_marginBottom="@dimen/list_item_view_margin"
            app:layout_constraintTop_toBottomOf="@+id/marker_latitude_title_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/marker_longitude_title_text" />

        <TextView
            android:id="@+id/marker_longitude_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_view_margin"
            app:layout_constraintBottom_toBottomOf="@+id/marker_longitude_title_text_view"
            app:layout_constraintLeft_toRightOf="@+id/marker_longitude_title_text_view"
            app:layout_constraintTop_toTopOf="@+id/marker_longitude_title_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/delete_marker_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_view_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/purple_200"
            android:text="@string/delete_marker_text" />

        <TextView
            android:id="@+id/edit_marker_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_item_view_margin"
            app:layout_constraintTop_toBottomOf="@+id/delete_marker_text_view"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/purple_200"
            android:text="@string/edit_marker_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/main_constraint_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/black"
        android:layout_margin="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>